# ab

./: .gitignore  CONTRACT.md  README.md  pyproject.toml
configs/: config.yaml
configs/data/: poas.yaml  sabdab.yaml
configs/encoder/: antifold.yaml  cached.yaml  esm2.yaml  igfold.yaml
configs/eval/: default.yaml
configs/inference/: default.yaml
configs/model/: decoder_150m.yaml  decoder_50m.yaml  lora.yaml
configs/pooling/: cdr_attention.yaml  cdr_mean.yaml  cdr_plddt.yaml  cdr_segmented.yaml  fv_mean.yaml  per_residue.yaml
configs/projector/: mlp.yaml  perceiver.yaml  qformer.yaml
configs/training/: stage_a.yaml  stage_b.yaml
notebooks/: 01_tokenizer.ipynb  02_data_pipeline.ipynb  03_models.ipynb  04_training.ipynb  05_inference.ipynb  06_evaluation.ipynb
scripts/: eval.py  infer.py  train.py
src/data/: __init__.py  dataset.py  embeddings.py  filter.py  folding.py  numbering.py  preprocess.py  splits.py
src/eval/: __init__.py  developability.py  evaluate.py  naturalness.py  sequence.py  structure.py
src/inference/: __init__.py  generate.py  io.py
src/models/: __init__.py  abllava.py  decoder.py  encoders.py  lora.py  pooling.py  projectors.py
src/training/: __init__.py  loop.py  losses.py  optim.py  stage_a.py  stage_b.py
src/utils/: __init__.py  logging.py  tokenizer.py
tests/: test_data.py  test_eval.py  test_inference.py  test_models.py  test_training.py
