[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abllava"
version = "0.1.0"
description = "AbLLaVA: A Frozen-Encoder, Frozen-Decoder Approach to Paired Antibody Inverse Folding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "transformers>=4.45",
    "accelerate>=0.34",
    "peft>=0.13",
    "datasets>=2.20",
    "biopython>=1.83",
    "einops>=0.8",
    "tqdm>=4.66",
    "wandb>=0.18",
    "scipy>=1.13",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
antibody = [
    "anarci",
    "abnumber",
    "ablang2",
    "antiberty",
    "ImmuneBuilder",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 110
target-version = "py310"
